# osea-svn

branches/libvortex-vendor/libvortex/: AUTHORS  VERSION  autogen.sh  configure.ac  vortex.pc.in
branches/libvortex-vendor/libvortex/data/: Makefile.am
branches/libvortex-vendor/libvortex/doc/: Makefile.am  vortex-doc.doxygen.in
branches/libvortex-vendor/libvortex/src/: vortex.c  vortex_channel.c  vortex_channel_pool.c  vortex_channel_pool.h  vortex_dtds.h  vortex_frame_factory.h  vortex_greetings.c  vortex_greetings.h  vortex_profiles.c  vortex_profiles.h  vortex_queue.c  vortex_queue.h  vortex_reader.c  vortex_reader.h  vortex_sequencer.c  vortex_thread_pool.h  vortex_types.h  vortex_win32.c  vortex_win32.h  vortex_writer.c
branches/libvortex-vendor/libvortex/test/: Makefile.am  vortex-listener.c  vortex-simple-listener.c
branches/original-vortex/libvortex/src/: Makefile.am  vortex_connection.c  vortex_dtds.c  vortex_errno.c  vortex_hash.c  vortex_hash.h  vortex_listener.c  vortex_semaphore.c
trunk/oinvoice/libaoscustomer/src/: Makefile.am  aos-customer-customer.gob  aos_customer.h  aos_customer_address.c  aos_customer_address.h  aos_customer_contact.c  aos_customer_contact.h  aos_customer_customer.c  aos_customer_customer.h  aos_customer_enum_values.c  aos_customer_enum_values.h  aos_customer_inet_data.c  aos_customer_inet_data.h  aos_customer_telephone.c  aos_customer_telephone.h
trunk/oinvoice/libaostax/: Makefile.am  aostax.pc  autogen.sh  configure.ac
trunk/oinvoice/libaostax/src/: Makefile.am  aos-tax-vatcustomer.gob  aos-tax-vatitem.gob  aos_tax.c  aos_tax.h  aos_tax_vat_customer.c  aos_tax_vat_customer.h  aos_tax_vat_item.c  aos_tax_vat_item.h  aos_tax_vat_value.c  aos_tax_vat_value.h
trunk/oinvoice/libaostax/test/: Makefile.am  test_aos_tax_vat_client.c  test_aos_tax_vat_customer.c  test_aos_tax_vat_item.c  test_aos_tax_vat_value.c
trunk/oinvoice/oinvoice/: .cvsignore  ChangeLog  Makefile.am  README  configure.in
trunk/oinvoice/oinvoice/debian/: changelog  control
trunk/oinvoice/oinvoice/gui/: Makefile.am  connection_settings.glade  customer.glade  login.glade  main.glade  main.xpd  user.glade  user.xpd  user_group.xpd  user_permission.xpd  vat.glade  vat.xpd  vat_item.xpd  vat_value.xpd  xpd.dtd
trunk/oinvoice/oinvoice/po/: POTFILES.in  es.po
trunk/oinvoice/oinvoice/src/: Makefile.am  about_window.c  about_window.h  connection_progress_window.c  connection_progress_window.h  connection_settings_window.c  connection_settings_window.h  connection_settings_wizard.c  connection_settings_wizard.h  customer.c  customer.h  customer_actions.c  customer_actions.h  customer_window.c  customer_window.h  detailedview-manager.gob  dialog.c  dialog.h  entry-manager.gob  error.c  error.h  event_process.c  event_process.h  event_source.c  event_source.h  login_window.c  login_window.h  main.c  main_window.c  main_window.h  osea_datalist.c  osea_datalist.h  osea_listmodel.c  osea_listmodel.h  refresh_session_dialog.c  refresh_session_dialog.h  session.c  session.h  settings.c  settings.h  (+22 more)
trunk/oinvoice/os-customer/src/: Makefile.am  os_customer.c  os_customer_address.c  os_customer_address.h  os_customer_contact.c  os_customer_contact.h  os_customer_customer.c  os_customer_customer.h  os_customer_enum_values.c  os_customer_enum_values.h  os_customer_inet_data.c  os_customer_inet_data.h  os_customer_telephone.c  os_customer_telephone.h
trunk/oinvoice/os-tax/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
trunk/oinvoice/os-tax/data/: Makefile.am  install.sql  os-tax.cfg.example  uninstall.sql
trunk/oinvoice/os-tax/src/: Makefile.am  os_tax.c  os_tax_vat_customer.c  os_tax_vat_customer.h  os_tax_vat_item.c  os_tax_vat_item.h  os_tax_vat_value.c  os_tax_vat_value.h
trunk/osea/: Makefile.am  README  autogen.sh  configure.ac
trunk/osea/doc/reference/: Makefile.am  osea-system-decl.txt  osea-system-docs.sgml
trunk/osea/libaoskernel/: Makefile.am  libaoskernel.pc.in
trunk/osea/libaoskernel/debian/: control  libaoskernel0-doc.files
trunk/osea/libaoskernel/src/: Makefile.am  aos-kernel-group.gob  aos-kernel-user.gob  aos_kernel.c  aos_kernel.h  aos_kernel_group.c  aos_kernel_group.h  aos_kernel_permission.c  aos_kernel_permission.h  aos_kernel_register.c  aos_kernel_register.h  aos_kernel_server.c  aos_kernel_server.h  aos_kernel_user.c  aos_kernel_user.h
trunk/osea/libaoskernel/test/: Makefile.am  test_aos_kernel_group.c  test_aos_kernel_permission.c  test_aos_kernel_session.c  test_aos_kernel_user.c
trunk/osea/liboseaclient/: Makefile.am
trunk/osea/liboseaclient/src/: Makefile.am  oseaclient-datanode.gob  oseaclient-detaileddatanode.gob  oseaclient.c  oseaclient.h  oseaclient_decimal.c  oseaclient_decimal.h  oseaclient_event_source.c  oseaclient_event_source.h  oseaclient_keys.c  oseaclient_keys.h  oseaclient_list.c  oseaclient_list.h  oseaclient_password.c  oseaclient_password.h  oseaclient_request.c  oseaclient_request.h  oseaclient_session.c  oseaclient_session.h  oseaclient_support.c  oseaclient_support.h
trunk/osea/liboseaclient/test/: Makefile.am
trunk/osea/liboseacomm/: Makefile.am
trunk/osea/liboseacomm/src/: Makefile.am  oseacomm.c  oseacomm.h  oseacomm_code.c  oseacomm_code.h  oseacomm_connection.c  oseacomm_connection.h  oseacomm_dataset.c  oseacomm_dataset.h  oseacomm_h  oseacomm_partial_message.h  oseacomm_simple.c  oseacomm_simple.h  oseacomm_simple_cfg.c  oseacomm_simple_cfg.h  oseacomm_xml.c  oseacomm_xml.h
trunk/osea/liboseacomm/test/: Makefile.am  test_coyote.c  test_coyote_xml.c  test_oseacomm_simple.c  test_oseacomm_xml.c
trunk/osea/liboseaserver/: Makefile.am  liboseaserver.pc.in
trunk/osea/liboseaserver/src/: Makefile.am  oseaserver.h  oseaserver_command.c  oseaserver_command.h  oseaserver_config.c  oseaserver_config.h  oseaserver_database.c  oseaserver_database.h  oseaserver_keys.c  oseaserver_keys.h  oseaserver_log.c  oseaserver_log.h  oseaserver_main.c  oseaserver_main.h  oseaserver_message.c  (+7 more)
trunk/osea/liboseatype/: Makefile.am  liboseatype.pc.in
trunk/osea/os-kernel/: .cvsignore
(+352 files in other folders)
