SUBDIRS = pixmaps

xpddtddir = $(datadir)/aspl-fact
xpddtd_DATA = \
	xpd.dtd

gladedir = $(datadir)/aspl-fact/glade
glade_DATA =   \
	login.glade \
	connection_settings.glade \
	vat.glade \
	user.glade \
	main.glade \
	customer.glade \
	vat.xpd \
	vat_item.xpd \
	vat_value.xpd \
	user.xpd \
	user_group.xpd \
	user_permission.xpd \
	main.xpd	

EXTRA_DIST = $(glade_DATA)
