INCLUDES = -g -I$(top_srcdir) $(LIBRARIES_CFLAGS) \
	-DPACKAGE_DTD_DIR=\""$(datadir)"\"  -Wall

liboseacommincludedir = $(includedir)/liboseacomm

lib_LTLIBRARIES = liboseacomm.la

liboseacomm_la_SOURCES =	\


liboseacomminclude_HEADERS =	\
	oseacomm.h

liboseacomm_la_LIBADD = \
	$(LIBRARIES_LIBS)

