noinst_PROGRAMS = test_oseatype_date test_oseatype_time test_oseatype_language

INCLUDES = -I $(top_srcdir)/liboseatype $(LIBRARIES_CFLAGS) -Wall

test_oseatype_date_SOURCES = test_oseatype_date.c

test_oseatype_date_LDADD = $(LIBRARIES_LIBS) $(top_builddir)/liboseatype/src/liboseatype.la

test_oseatype_time_SOURCES = test_oseatype_time.c

test_oseatype_time_LDADD = $(LIBRARIES_LIBS) $(top_builddir)/liboseatype/src/liboseatype.la

test_oseatype_language_SOURCES = test_oseatype_language.c

test_oseatype_language_LDADD = $(LIBRARIES_LIBS) $(top_builddir)/liboseatype/src/liboseatype.la


